stories/Molecules/Text/Page/page.scss
@import "../../../assets/scss/mixins";
@import "../../../assets/scss/breakpoints";
@import "../../../assets/scss/variables";

.Page-title {
  h2 {
    margin-bottom: 20px;
    text-transform: uppercase;
    font-family: $Font-Family-SohneBold;
  }
  h4 {
    font-family: $Font-Family-ProximaLight;
  }
  &--white {
    h2, h4 {
      color: $color-white;
    }
  }
}

